--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "0-rncourse",
+  "name": "home-tasks",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.30",
+    "expo": "~52.0.42",
+    "expo-constants": "^17.0.8",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
