--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
     "expo-status-bar": "~2.0.1",
