--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.4",
     "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
+    "expo-local-authentication": "^15.0.2",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "react": "18.3.1",
